wip: Register and email validation

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,14 @@ DATABASE_NAME=urban_hotel
 # SERVICE REGISTRY/DISCOVERY
 DISCOVERY_HOST=consul
 DISCOVERY_PORT=8500
+
+# SMTP CREDENTIALS
+SMTP_HOST=mailhog
+SMTP_PORT=1025
+SMTP_DEFAULT_FROM_ADDRESS=noreply@urbanhotel.com
+SMTP_USER=
+SMTP_PASS=
+MAIL_FROM_NAME=Urban Hotel
+
+# GENERAL CONFIG
+FRONTEND_URL=http://localhost:8080
