wip: booking create

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ MAIL_FROM_NAME=Urban Hotel
 
 # GENERAL CONFIG
 FRONTEND_URL=http://localhost:8080
+
+# PAYMENT GATEWAY
+PAYMENT_GATEWAY_URL=http://payment-gateway:8085
